testsuite/tests/rename/should_fail/rnfail048.stderr
rnfail048.hs:11:12: error: [GHC-43895]
    Conflicting pragmas for ‘foo’
    Pragmas:
      NOINLINE at rnfail048.hs:6:17-19
      NOINLINE at rnfail048.hs:7:18-20
      NOINLINE at rnfail048.hs:8:14-16
      INLINE at rnfail048.hs:9:15-17
      INLINE at rnfail048.hs:10:16-18
      INLINE at rnfail048.hs:11:12-14
